--- a/milestone1/css/style.css
+++ b/milestone1/css/style.css
@@ -177,3 +177,29 @@ footer > input {
   border-radius: 5px;
   padding-left: 10px;
 }
+
+.container-message {
+  width: 80%;
+  margin: 0 auto;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-top: 50px;
+}
+
+.container-message li {
+  width: 300px;
+  padding: 20px 15px;
+  border-radius: 10px;
+}
+
+.sent {
+  align-self: flex-end;
+  background-color: #d5f9ba;
+}
+
+.received {
+  align-self: flex-start;
+  background-color: white;
+}
