--- a/milestone5/css/style.css
+++ b/milestone5/css/style.css
@@ -299,14 +299,27 @@ footer > input {
   top: 30px;
 }
 
-.dropdown-content a {
+.dropdown-header {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  right: 0;
+  top: 10px;
+}
+
+.dropdown-content a,
+.dropdown-header a {
   color: black;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
 }
 
-.dropdown-content a:hover {
+.dropdown-content a:hover,
+.dropdown-header a:hover {
   background-color: #ddd;
 }
 
